--- a/src/lupin/AppController.fxml
+++ b/src/lupin/AppController.fxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0"
-      xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lupin.AppController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+      minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121" fx:controller="lupin.AppController">
     <HBox alignment="CENTER" spacing="10.0">
         <TextField fx:id="chooseFileInfo" editable="false" minWidth="300.0" promptText="Choose a file..."/>
         <Button mnemonicParsing="false" onAction="#onChooseFile" text="..."/>
     </HBox>
+    <TextArea fx:id="filePreview" editable="false" prefWidth="200.0" promptText="File preview..." wrapText="true"/>
     <TextField fx:id="cipherKeyInput" promptText="Enter a key...">
         <VBox.margin>
             <Insets/>
