--- a/src/lupin/AppController.fxml
+++ b/src/lupin/AppController.fxml
@@ -3,25 +3,33 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="512.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121" fx:controller="lupin.AppController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity"
+      minHeight="-Infinity" minWidth="512.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121"
+      fx:controller="lupin.AppController">
     <HBox alignment="CENTER" spacing="10.0">
         <TextField fx:id="chooseFileInfo" editable="false" promptText="Choose a file..." HBox.hgrow="ALWAYS"/>
         <Button mnemonicParsing="false" onAction="#onChooseFile" text="..."/>
     </HBox>
-    <TextArea fx:id="filePreview" editable="false" prefWidth="200.0" promptText="File preview..." wrapText="true"/>
+    <TextArea fx:id="fileDataPreview" editable="false" prefWidth="200.0" promptText="File preview..." wrapText="true"/>
     <Label alignment="CENTER" contentDisplay="CENTER" text="Cipher" textAlignment="CENTER"/>
     <HBox alignment="CENTER" spacing="10.0">
-        <TextField fx:id="cipherKeyInput" onKeyTyped="#onKeyChanged" promptText="Enter a key..." HBox.hgrow="ALWAYS"/>
+        <TextField fx:id="cipherKeyInput" promptText="Enter a key..." HBox.hgrow="ALWAYS"/>
         <Button mnemonicParsing="false" onAction="#onEncryptFile" text="Encrypt"/>
         <Button mnemonicParsing="false" onAction="#onDecryptFile" text="Decrypt"/>
     </HBox>
+    <VBox alignment="CENTER_RIGHT" spacing="10.0">
+        <TextArea fx:id="cipherFileDataPreview" editable="false" prefRowCount="5" promptText="Ciphering result..."
+                  wrapText="true"/>
+        <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onSaveFile"
+                text="Save" textAlignment="CENTER"/>
+    </VBox>
     <Label text="Decipher"/>
     <HBox spacing="10.0">
-        <TextField promptText="Enter most frequently occurring word..." HBox.hgrow="ALWAYS"/>
-        <Button mnemonicParsing="false" text="Find"/>
+        <TextField fx:id="decipherKeyInput" promptText="Enter most frequently occurring word..." HBox.hgrow="ALWAYS"/>
+        <Button mnemonicParsing="false" onAction="#onDecipherFile" text="Find"/>
     </HBox>
-    <TextField editable="false" promptText="Possible key..."/>
+    <TextArea fx:id="possibleKeyInput" editable="false" prefRowCount="5" promptText="Possible key result..."
+              wrapText="true"/>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
